id pw 입력칸 만들기

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,25 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="VISIBILITY"
-        android:id="@+id/visibleBtn"
-        />
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="INVISIBILITY"
-        android:id="@+id/invisibleBtn"
-        />
+    android:orientation="vertical"
+    android:padding="16dp">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/targetView"
-        android:text="이지스퍼블리싱 - 웹페이지: http://easyspub.com, 전화번호: 111-1111, 이메일: wpdnjs20@gmail.com"
-        android:autoLink="web|email|phone"
-        android:gravity="center"/>
+        android:text="회원님의 소중한 정보 보호를 위해, 카카오 계정의 현재 비밀번호를 확인해 주세요. "
+        android:textSize="17sp"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="wpdnjs20@gmail.com"
+        android:textColor="#D4D4D3"/>
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="비밀번호가 기억나지 않으세요?"/>
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="확인"/>
+    // visible invisible 만들기
+
 </LinearLayout>
